Final version before live deployment

--- a/tasks.json
+++ b/tasks.json
@@ -1,18 +1,6 @@
 [
   {
-    "text": "finish Home work",
-    "done": false
-  },
-  {
-    "text": "code review",
-    "done": false
-  },
-  {
-    "text": "call mom asap",
-    "done": false
-  },
-  {
-    "text": "deadline for project",
+    "text": "email",
     "done": false
   }
 ]
